Refactoring, adds some tests